fixed css alignment and button issue

--- a/public/styles/addevent-loadpage.css
+++ b/public/styles/addevent-loadpage.css
@@ -126,7 +126,7 @@ width: 11vw;
     padding-right: 0cm;
 }
 
-.descriptioninput {
+.descriptiontextbox {
     width: 33vw;
     padding: 0;
 }
